Fixed error box styling and visibility

--- a/css/style.css
+++ b/css/style.css
@@ -166,6 +166,13 @@ option {
 	border-radius: 4px;
 }
 
+#error-box {
+	color: red;
+	margin-top: 10px;
+	margin-bottom: 10px;
+	padding: 5px;
+	background-color: lightgray;
+}
 /* ================================= 
   Helper Classes
 ==================================== */
